<resources>
    <string name="app_name">BotanicalBuddy</string>
    <string name="water_savers">Water Savers</string>
    <string name="cool_tones">Cool Tones</string>
    <string name="shade_plants">Shade Plants</string>
    <string name="shallow_soils">Shallow Soils</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="passHint">Enter Password Hint</string>
    <string name="register">Register</string>
    <string name="hintButton">Cant remember your password?</string>
    <string name="checkhint">Check Hint</string>
    <string name="hintText">Enter a valid username to get a password hint</string>
    <string name="welcome">Welcome to</string>
    <string name="destinations_and_amenities">Destinations and Amenities</string>
    <string name="key">Key</string>
    <string name="conserveLandingTitle">Ways to Conserve</string>
    <string name="waterSaverLandscaping">Did you know that about 30% of the water used in San Antonio households is applied solely to landscapes? Low water landscaping is strongly encouraged in arid climates, where water is a limited resource. Drought tolerant gardens and efficient irrigation are both extremely important in areas such as San Antonio and other climates where rain is not plentiful.\n\nAdd some to your garden to help save our city water!</string>
</resources>