<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConserveActivity">


    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/cool_tones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cool_tones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLogo" />

    <Button
        android:id="@+id/shade_plants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shade_plants"
        app:layout_constraintEnd_toStartOf="@+id/cool_tones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLogo" />

    <Button
        android:id="@+id/shallow_soils"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shallow_soils"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cool_tones"
        app:layout_constraintTop_toBottomOf="@+id/mainLogo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cool_tones" />
</androidx.constraintlayout.widget.ConstraintLayout>